# sublink-worker-rust

./: .gitignore  BUILD.md  Cargo.toml  Dockerfile  LICENSE  README.md  config.toml.example  package.nix  rust-toolchain.toml  shell.nix
openwrt/: Makefile
openwrt-init/: sublink
openwrt/files/: sublink  sublink.init
public/: index.html
public/css/: style.css
public/js/: app.js  i18n.js
scripts/: build-mipsel.sh
src/: html.rs  main.rs
src/adapters/: kv_adapter.rs  mod.rs
src/builders/: base_builder.rs  clash_builder.rs  mod.rs  singbox_builder.rs  surge_builder.rs
src/config/: mod.rs
src/i18n/: mod.rs
src/parsers/: mod.rs  proxy_parser.rs  subscription_parser.rs
src/parsers/protocols/: hysteria2.rs  mod.rs  shadowsocks.rs  trojan.rs  tuic.rs  vless.rs  vmess.rs
src/runtime/: mod.rs
src/services/: config_storage_service.rs  errors.rs  mod.rs  short_link_service.rs
src/utils/: base64_utils.rs  country_utils.rs  http_utils.rs  mod.rs
