[package]
name = "sublink-worker"
version = "0.1.0"
edition = "2021"
authors = ["7Sageer"]
description = "A lightweight subscription converter and manager for proxy protocols"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "compression-gzip"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"

# Encoding/Decoding
base64 = "0.21"
percent-encoding = "2.3"

# HTTP client
reqwest = { version = "0.11", features = ["json", "rustls-tls"], default-features = false }

# Error handling
thiserror = "1"
anyhow = "1"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
config = "0.14"

# Time
chrono = { version = "0.4", features = ["serde"] }

# UUID for short links
uuid = { version = "1", features = ["v4", "fast-rng"] }

# Regex
regex = "1"

# URL parsing
url = "2"
urlencoding = "2"

# i18n
fluent = "0.16"
fluent-bundle = "0.15"
unic-langid = "0.9"

# Crypto (for proxy protocols)
aes = "0.8"
cipher = "0.4"
sha2 = "0.10"
hmac = "0.12"
blake3 = "1"

# Compression
flate2 = "1"

# Random
rand = "0.8"

# Redis (optional, for KV storage)
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"], optional = true }

# SQLite (optional, for config storage)
rusqlite = { version = "0.31", features = ["bundled"], optional = true }

[features]
default = ["redis", "sqlite"]
redis = ["dep:redis"]
sqlite = ["dep:rusqlite"]
static = []

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-musl]
inherits = "release"
target-feature = "+crt-static"
